🐛 letter-spacing fixed

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -3,6 +3,7 @@
 	font-family: $font-main;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
+	letter-spacing: 0.025em;
 	box-sizing: border-box;
 }
 
